--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <audio id="Snareaudio" src="snare.mp3" type="audio/mpeg"></audio></div>
 
         <div id="section4"> <img id="Tom" src="tom.png" alt="">
-        <audio id="Kickaudio" src="tom.mp3" type="audio/mpeg"></audio></div>
+        <audio id="Tomaudio" src="tom.mp3" type="audio/mpeg"></audio></div>
 
 </div>
 
