--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BandBaazaBaarat</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
                                                                     
@@ -12,17 +13,17 @@
     <div id="child1"><img src="drummer.avif" alt=""></div>
     <div id="child2">
 
-        <div id="section1"><img id="Crash" src="crash.png" alt="">
-        <audio id="Crashaudio" src="crash.mp3" type="audio/mpeg"></audio> </div>
+        <img id="Crash" src="crash.png" alt="">
+        <audio id="Crashaudio" src="crash.mp3" type="audio/mpeg"></audio> 
 
-        <div id="section2"><img id="Kick" src="kick.png" alt=""> 
-        <audio  id="Kickaudio" src="kick.mp3" type="audio/mpeg"></audio></div>
+        <img id="Kick" src="kick.png" alt=""> 
+        <audio  id="Kickaudio" src="kick.mp3" type="audio/mpeg"></audio>
 
-        <div id="section3"> <img id="Snare" src="snare.png" alt="">
-        <audio id="Snareaudio" src="snare.mp3" type="audio/mpeg"></audio></div>
+         <img id="Snare" src="snare.png" alt="">
+        <audio id="Snareaudio" src="snare.mp3" type="audio/mpeg"></audio>
 
-        <div id="section4"> <img id="Tom" src="tom.png" alt="">
-        <audio id="Tomaudio" src="tom.mp3" type="audio/mpeg"></audio></div>
+         <img id="Tom" src="tom.png" alt="">
+        <audio id="Tomaudio" src="tom.mp3" type="audio/mpeg"></audio>
 
 </div>
 
